--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         // Create a new room and redirect
         createRoomBtn.addEventListener('click', () => {
             const newRoomId = uuid.v4();
-            // Use the public server URL for redirection
-            window.location.href = `https://videoapp-au2s.onrender.com/${newRoomId}`;
+            window.location.href = `/${newRoomId}`;
         });
         
         // Copy the current room link to clipboard
@@ -123,10 +122,7 @@
         }
 
         function startVideoChat() {
-            // *** THIS IS THE IMPORTANT CHANGE ***
-            // Connect to your deployed Render server
-            const socket = io('https://videoapp-au2s.onrender.com');
-            
+            const socket = io('/');
             const videoGrid = document.getElementById('video-grid');
             const myVideo = document.createElement('video');
             myVideo.muted = true;
